feat:added validation and swagger documentation to Portfolio entity